<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
tools:context=".presentation.GameActivity">

<ImageButton
    android:id="@+id/imageButtonBack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/back"
    android:background="@null"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textViewScore"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/score"
    android:textSize="@dimen/medium_text_size"
    android:textColor="@color/colorAccent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="1000"/>

<ImageView
    android:id="@+id/imageViewAvatar"
    style="@style/AvatarImageView"
    android:layout_margin="@dimen/base_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/avatar"
    tools:src="@tools:sample/avatars" />

<TextView
    android:id="@+id/textViewName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/small_text_size"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
    android:textColor="@color/colorAccent"
    tools:text="Миша"/>

<ProgressBar
    android:id="@+id/progressBarTime"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_margin="@dimen/base_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewName"
    tools:progress="50"/>

<TextView
    android:id="@+id/textViewTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/big_text_size"
    android:layout_marginTop="@dimen/base_margin"
    app:layout_constraintTop_toBottomOf="@id/progressBarTime"
    app:layout_constraintBottom_toTopOf="@id/editTextAnswer"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    android:textColor="@color/colorAccent"
    tools:text="2+2" />

<EditText
    android:id="@+id/editTextAnswer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="@dimen/edit_text_ems"
    android:textSize="@dimen/medium_text_size"
    android:inputType="number"
    android:textColor="@color/colorAccent"
    android:textAlignment="center"
    android:gravity="center_horizontal"
    android:layout_marginStart="@dimen/base_margin"
    android:layout_marginEnd="@dimen/base_margin"
    android:backgroundTint="@color/colorAccent"
    app:layout_constraintBottom_toTopOf="@+id/keyboard"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/progressBarTime"
    android:autofillHints="false"
    tools:text="155"
    tools:ignore="LabelFor,UnusedAttribute" />

<ImageView
    android:id="@+id/imageViewReaction"
    android:layout_width="@dimen/reaction_size"
    android:layout_height="@dimen/reaction_size"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/editTextAnswer"
    app:layout_constraintBottom_toBottomOf="@+id/editTextAnswer"
    android:layout_marginTop="@dimen/negative_anim_margin"
    android:layout_marginBottom="@dimen/negative_anim_margin"
    android:src="@drawable/win"
    android:visibility="invisible"
    android:contentDescription="@string/empty"/>

<include
    android:id="@+id/keyboard"
    layout="@layout/layout_keyboard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextAnswer" />

</androidx.constraintlayout.widget.ConstraintLayout>